Kubernetes/MongoDB + Python Flask Web  Framework + REST API + GKE/configmap_and_ingress/bookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf
  labels:
    app: bookshelf-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookshelf
  template:
    metadata:
      labels:
        app: bookshelf
    spec:
      containers:
      - image: pari440/bookshelf
        name: bookshelf
        ports:
        - containerPort: 5000
