Kubernetes/MongoDB + Python Flask Web  Framework + REST API + GKE/configmap_and_ingress/studentserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentserver
  labels:
    app: studentserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentserver
  template:
    metadata:
      labels:
        app: studentserver
    spec:
      containers:
      - image: pari440/studentserver
        name: studentserver
        ports:
        - containerPort: 8080
