Kubernetes/MongoDB + Python Flask Web  Framework + REST API + GKE/configmap_and_ingress/bookshelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf-service
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: bookshelf
