Kubernetes/MongoDB + Python Flask Web  Framework + REST API + GKE/configmap_and_ingress/studentserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentserver-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: studentserver
